Add activation, login, logout

--- a/account/templates/account/activation.html
+++ b/account/templates/account/activation.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Activation</title>
 </head>
 <body>
-
+    <h1>Your account has been successfully activated</h1>
+    <p>You can enter <a href="{% url 'signin' %}">the site</a></p>
 </body>
 </html>
