--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Enter site</title>
 </head>
 <body>
-
+    <h1>Enter site</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Enter</button>
+    </form>
+    <h4>If you do not have an account, you can <a href="{% url 'registration' %}">register here</a></h4>
 </body>
 </html>
