--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
+
 {% block title %} Список продуктов {% endblock title %}
+
 {% block body %}
     <h1>Список продуктов</h1>
     {% for prod in products %}
         <p>{{ prod.id }}</p>
         <p><a href="{% url 'product-details' prod.id %}" >{{ prod.name }}</a></p>
         <p>{{ prod.price }}</p>
+        {% include 'add_to_cart_form.html' with product=prod %}
         <p>-----------------</p>
     {% endfor %}
 
