--- a/order/templates/order/checkout.html
+++ b/order/templates/order/checkout.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Корзина{% endblock title %}
+{% block title %}Оформление заказа{% endblock title %}
 
 {% block body %}
-  <!-- ********************** -->
+<!-- ********************** -->
   <!--     I N T R O          -->
   <!-- ********************** -->
+
   <div id="intro">
     <div id="intro_wrap">
       <div class="container_12">
         <div id="breadcrumbs" class="grid_12">
-          <a href="{% url 'index' %}">Главная</a>
-           &gt; <a href="{% url 'cart-details' %}">Корзина</a>
+          <a href="">Главная</a>
+          &gt;
+          <a href="">Оформление заказа</a>
         </div>
-        <h1>Ваша корзина:</h1>
+        <h1>Оформление заказа</h1>
       </div>
     </div>
   </div>
@@ -26,36 +28,46 @@
   <!-- ********************** -->
   <div id="content" class="container_12">
 
-    <div id="shopping_cart" class="grid_12">
-
+    <div id="checkout" class="grid_12">
+        <h2>Billing details</h2>
+        <div>
+          <div class="grid_6 alpha">
+            <h3><span class="s_secondary_color">Ваши</span> контакты</h3>
+            <form method="post">
+              {% csrf_token %}
+              <div class="s_row_2 clearfix">
+                <label>Phone number: *</label>
+                {{ form.phone_number }}
+              </div>
+              <div class="s_row_2 clearfix">
+                <label>Address: *</label>
+                {{ form.address }}
+              </div>
+              <div class="s_row_2 clearfix">
+                <button type="submit" class="s_button_1 s_main_color_bgr"><span class="s_text">Оформить &rsaquo;</span></button>
+              </div>
+            </form>
+          </div>
+          <div class="grid_6 omega">
+            <h3><span class="s_secondary_color">Ваш</span> Заказ</h3>
         <table class="s_table_1" width="100%" cellpadding="0" cellspacing="0" border="0">
           <thead>
             <tr>
-            <th width="60">Изображение</th>
             <th width="320">Наименование</th>
             <th>Цена за единицу</th>
             <th>Количество</th>
             <th>Сумма</th>
-            <th width="65">Удалить</th>
           </tr>
           </thead>
           <tbody>
             {% for item in cart %}
               <tr class="even">
                 <td valign="middle">
-                  <a href="{% url 'product-details' item.product.id %}">
-                    <img src="{{ item.product.image.url }}" width="60" height="60" alt="{{ item.product.name }}" />
-                  </a>
-                </td>
-                <td valign="middle">
                   <a href="{% url 'product-details' item.product.id %}">{{ item.product.name }}</a>
                 </td>
                 <td valign="middle">{{ item.price }}</td>
                 <td valign="middle">{{ item.quantity }}</td>
                 <td valign="middle">{{ item.item_total }}</td>
-                <td valign="middle">
-                  <a href="{% url 'remove-from-cart' item.product.id %}">X</a>
-                </td>
             </tr>
             {% endfor %}
           </tbody>
@@ -64,17 +76,14 @@
         <p class="s_total s_secondary_color last"><strong>Total:</strong> {{ cart.get_cart_total }}<span class="s_currency s_after"> сом</span></p>
 
         <div class="clear"></div>
-        <br />
+              <br />
+          </div>
+          <div class="clear"></div>
 
-        <a href="{% url 'index' %}" class="s_button_1 s_ddd_bgr left"><span class="s_text">Continue Shopping</span></a>
-        <a href="{% url 'checkout' %}"><button class="s_button_1 s_main_color_bgr"><span class="s_text">Checkout</span></button></a>
-
-
+          <span class="clear"></span>
+          <br />
+        </div>
     </div>
-
-    <div class="clear"></div>
-    <br />
-    <br />
 
   </div>
   <!-- end of content -->
