--- a/main/templates/main/delete_product.html
+++ b/main/templates/main/delete_product.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}Удалить продукт?{% endblock title %}
+{% block title %}Delete product?{% endblock title %}
 {% block body %}
-    <h1>Вы действительно хотите удалить данный продукт?</h1>
+    <h1>Are you sure you want to uninstall this product?</h1>
     <form method="post">
         {% csrf_token %}
-        <button type="submit">Удалить</button>
-        <span> или </span>
+        <button type="submit">Delete</button>
+        <span> or </span>
         <a href="{% url 'product-details' product.id %}">
-            <button type="button">Отмена</button>
+            <button type="button">Cancel</button>
         </a>
     </form>
 {% endblock body %}
