--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Добро Пожаловать{% endblock title %}
+{% block title %}Welcome!{% endblock title %}
 
 {% block body %}
   <!-- ********************** -->
@@ -35,7 +35,7 @@ A wide range also includes original gifts for all occasions. Order with delivery
     <div class="clear"></div>
 
     <div id="special_home" class="grid_12">
-      <h2 class="s_title_1"><span class="s_main_color">Избранные</span> Товары</h2>
+      <h2 class="s_title_1"><span class="s_main_color">Preferred Goods</span></h2>
       <div class="clear"></div>
       <div class="s_listing s_grid_view clearfix">
         {% for product in products %}
