--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -129,24 +129,16 @@
         <h2>Categories</h2>
         <div class="s_list_1">
           <ul>
-          	<li>
-            	<a href="listing_1.html"><b>Electronics</b></a>
-            	<ul>
-              	<li><a href="listing_1.html">Digital Cameras</a></li>
-                <li><a href="listing_1.html">Home Audio</a></li>
-                <li><a href="listing_1.html">Home Cinema</a></li>
-                <li><a href="listing_1.html">Cell Phones</a></li>
-                <li><a href="listing_1.html">MP3 Players</a></li>
-                <li><a href="listing_1.html">Car-Audio</a></li>
-              </ul>
-            </li>
-            <li><a href="listing_1.html">Computers</a></li>
-            <li><a href="listing_1.html">Clothing</a></li>
+            <li><a href="listing_1.html">National clothes</a></li>
+            <li><a href="listing_1.html">Headdress</a></li>
+            <li><a href="listing_1.html">Accessories</a></li>
+            <li><a href="listing_1.html">Leather products</a></li>
+            <li><a href="listing_1.html">Felt products</a></li>
+            <li><a href="listing_1.html">Wood products</a></li>
             <li><a href="listing_1.html">Shoes</a></li>
             <li><a href="listing_1.html">Gifts</a></li>
             <li><a href="listing_1.html">At home</a></li>
             <li><a href="listing_1.html">Health</a></li>
-            <li><a href="listing_1.html">Jewellery</a></li>
             <li><a href="listing_1.html">Books</a></li>
           </ul>
       	</div>
