--- a/main/templates/main/search_results.html
+++ b/main/templates/main/search_results.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %} Результаты поиска {% endblock title %}
+{% block title %} Searching results {% endblock title %}
 
 {% block body %}
-    <h1>Результаты поиска:</h1>
+    <h1>Searching results:</h1>
     {% if products.count %}
     {% for prod in products %}
         <p>{{ prod.id }}</p>
@@ -13,7 +13,7 @@
         <p>-----------------</p>
     {% endfor %}
     {% else %}
-      <p>К сожалению, по вашему запросу ничего не найдено</p>
+      <p>Unfortunately, your search returned no results</p>
     {% endif %}
 
 {% endblock body %}
