--- a/order/templates/order/orders_list.html
+++ b/order/templates/order/orders_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Список заказов{% endblock title %}
+{% block title %}Order list{% endblock title %}
 
 {% block body %}
   <!-- ********************** --> 
