--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,33 +14,25 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
-<script type="text/javascript" src="{% static 'js/shoppica.js' %}"></script>
-
-
-
+<script type="text/javascript" src="{% static 'js/nomad land.js' %}"></script>
 </head>
-
 <body class="s_layout_fixed">
-
 <div id="wrapper">
-
   <!-- ********************** -->
   <!--      H E A D E R       -->
   <!-- ********************** -->
   <div id="header" class="container_12">
     <div class="grid_12">
-
-    	<a id="site_logo" href="index.html">Shoppica store - Premium e-Commerce Theme</a>
-
+    	<a id="Nomad Land" href="index.html">NOMAD LAND store</a>
       <div id="system_navigation" class="s_nav">
         <ul class="s_list_1 clearfix">
-          <li><a href="{% url 'index' %}">Главная</a></li>
-          <li><a href="{% url 'cart-details' %}">Корзина</a></li>
+          <li><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="{% url 'cart-details' %}">Basket</a></li>
           {% if not user.is_authenticated %}x
-          <li><a href="{% url 'signin' %}">Войти</a></li>
-          <li><a href="{% url 'registration' %}">Зарегистрироваться</a></li>
+          <li><a href="{% url 'signin' %}">Сome in</a></li>
+          <li><a href="{% url 'registration' %}">Register</a></li>
           {% else %}
-          <li><a href="{% url 'signout' %}">Выйти</a></li>
+          <li><a href="{% url 'signout' %}">Go out</a></li>
           {% endif %}
         </ul>
       </div>
@@ -56,21 +48,6 @@
           </select>
           <a class="s_button_1 s_secondary_color_bgr"><span class="s_text">Go</span></a> <a class="s_advanced s_main_color" href="">Advanced Search</a>
         </div>
-      </div>
-
-      <div id="language_switcher" class="s_switcher"> <span class="s_selected">US Dollar</span>
-        <ul class="s_options">
-          <li><a href="">Euro</a></li>
-          <li><a href="">Pound Sterling</a></li>
-          <li><a href="">US Dollar</a></li>
-        </ul>
-      </div>
-
-      <div id="currency_switcher" class="s_switcher"> <span class="s_selected"><img src="{% static 'images/flags/gb.png' %}" alt="English" /> English</span>
-        <ul class="s_options">
-          <li><a href=""><img src="{% static 'images/flags/gb.png' %}" alt="English" /> English</a></li>
-          <li><a href=""><img src="{% static 'images/flags/de.png' %}" alt="Deutsch" /> Deutsch</a></li>
-        </ul>
       </div>
 
       <div id="categories" class="s_nav">
