--- a/main/templates/main/create_product.html
+++ b/main/templates/main/create_product.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Создание продукта{% endblock title %}
+{% block title %}Product creation{% endblock title %}
 {% block body %}
-    <h1>Создание продукта</h1>
+    <h1>Product creation</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Сохранить</button>
+        <button type="submit">Save</button>
     </form>
 {% endblock body %}
