--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -11,7 +11,7 @@
     <div id="intro_wrap">
       <div class="container_12">
         <div id="breadcrumbs" class="grid_12">
-          <a href="{% url 'index' %}">Главная</a>
+          <a href="{% url 'index' %}">Home</a>
           &gt;
           <a href="{% url 'products-list' category.slug %}">{{ category.name }}</a>
         </div>
@@ -84,19 +84,7 @@
         <h2>Categories</h2>
         <div class="s_list_1">
           <ul>
-          	<li>
-            	<a href="listing_1.html"><b>Electronics</b></a>
-            	<ul>
-              	<li><a href="listing_1.html">Digital Cameras</a></li>
-                <li><a href="listing_1.html">Home Audio</a></li>
-                <li><a href="listing_1.html">Home Cinema</a></li>
-                <li><a href="listing_1.html">Cell Phones</a></li>
-                <li><a href="listing_1.html">MP3 Players</a></li>
-                <li><a href="listing_1.html">Car-Audio</a></li>
-              </ul>
-            </li>
-            <li><a href="listing_1.html">Computers</a></li>
-            <li><a href="listing_1.html">Clothing</a></li>
+          	<li><a href="listing_1.html">Clothing</a></li>
             <li><a href="listing_1.html">Shoes</a></li>
             <li><a href="listing_1.html">Gifts</a></li>
             <li><a href="listing_1.html">At home</a></li>
@@ -105,143 +93,39 @@
             <li><a href="listing_1.html">Books</a></li>
           </ul>
       	</div>
-			</div>
+      </div>
       
     	<div id="brands_module" class="s_box">
         <h2>Brands</h2>
         <select onchange="location = this.value">
           <option> --- Please Select --- </option>
-          <option>Adidas</option>
-          <option>Apple</option>
-          <option>Armani</option>
-          <option>Balenciaga</option>
-          <option>Bvlgari</option>
-          <option>Canon</option>
-          <option>Christian Dior</option>
-          <option>Elisabeth Arden</option>
-          <option>Hewlett-Packard</option>
-          <option>HTC</option>
-          <option>Hugo Boss</option>
-          <option>Nike</option>
-          <option>Nikon</option>
-          <option>Palm</option>
-          <option>Panasonic</option>
-          <option>Reebok</option>
-          <option>Samsung</option>
-          <option>Sony</option>
-          <option>Swarovski</option>
+          <option>Tumar</option>
+          <option>Keldike</option>
+           <option>Chokoychu</option>
+           <option>Сhukoland</option>
+           <option>Ecomade</option>
+           <option>ЕthnoKG</option>
+           <option>Oymo</option>
+           <option>Dilbar</option>
+           <option>Bagira</option>
+           <option>Ulusha Zhol</option>
+          <option>Ilbirs</option>
+          <option>Alexsandra</option>
+          <option>Ulusha Zhol </option>
+
         </select>
-      </div>
+        </div>
       
-      <div id="bestseller_side" class="s_box clearfix">
-        <h2>Bestsellers</h2>
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_10.jpg" width="38" height="38" alt="iPhone 3GS 8GB" /></a>
-          <h3><a href="product.html">iPhone 3GS 8GB</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>587.50</span></a></p>
-        </div>
-        
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_9.jpg" width="38" height="38" alt="Hubo Boss Emotion" /></a>
-          <h3><a href="product.html">Hubo Boss Emotion</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>2,350.00</span></a></p>
-        </div>
-        
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_8.jpg" width="38" height="38" alt="Panasonic Lumix" /></a>
-          <h3><a href="product.html">Panasonic Lumix</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-        
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_7.jpg" width="38" height="38" alt="Casio Exilim Zoom" /></a>
-          <h3><a href="product.html">Casio Exilim Zoom</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-  
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_6.jpg" width="38" height="38" alt="Christian Dior Amber Woman" /></a>
-          <h3><a href="product.html">Christian Dior Amber Woman</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>328.99</span></a></p>
-        </div>
-  
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_5.jpg" width="38" height="38" alt="iPod Classic" /></a>
-          <h3><a href="product.html">iPod Classic</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-        
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_4.jpg" width="38" height="38" alt="Sony VAIO" /></a>
-          <h3><a href="product.html">Sony VAIO</a></h3>
-          <p><a href="product.html"><span class="s_old"><span class="s_currency s_before">£</span>1,175.00</span> <span class="s_secondary_color"><span class="s_currency s_before">£</span>1,057.50</span></a></p>
-          <div class="s_rating_holder clearfix"><p class="s_rating s_rating_small s_rating_5 left"><span style="width: 100%;" class="s_percent"></span></p><span class="left">&nbsp;5/5</span></div>
-        </div>
-  
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_3.jpg" width="38" height="38" alt="Canon Digital Ixus 200 IS" /></a>
-          <h3><a href="product.html">Canon Digital Ixus 200 IS</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-    
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_2.jpg" width="38" height="38" alt="Hugo Boss Chrome" /></a>
-          <h3><a href="product.html">Hugo Boss Chrome</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-    
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_1.jpg" width="38" height="38" alt="Hennesy Paradis Extra" /></a>
-          <h3><a href="product.html">Hennesy Paradis Extra</a></h3>
-          <p><a href="product.html"><span class="s_old"><span class="s_currency s_before">£</span>1,175.00</span> <span class="s_secondary_color"><span class="s_currency s_before">£</span>1,057.50</span></a></p>
-        </div>
-    
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_10.jpg" width="38" height="38" alt="Elizabeth Arden Pretty" /></a>
-          <h3><a href="product.html">Elizabeth Arden Pretty</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-    
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_9.jpg" width="38" height="38" alt="Sony Cyber Shot S1000" /></a>
-          <h3><a href="product.html">Sony Cyber Shot S1000</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-      </div>
-    
-      <div id="information_module" class="s_box">
+
         <h2>Information</h2>
         <ul class="s_list_1">
-          <li><a href="static.html">About Shoppica</a></li>
+          <li><a href="static.html">About Nomad Shop</a></li>
           <li><a href="static.html">Privacy Policy</a></li>
           <li><a href="static.html">Terms &amp; Conditions</a></li>
           <li><a href="contacts.html">Contact Us</a></li>
           <li><a href="sitemap.html">Site Map</a></li>
         </ul>
-      </div>
-  
-      <div id="featured_side" class="s_box clearfix">
-        <h2>Featured</h2>
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_8.jpg" width="38" height="38" alt="White football trainers" /></a>
-          <h3><a href="product.html">White football trainers</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_7.jpg" width="38" height="38" alt="Hubo Boss Emotion" /></a>
-          <h3><a href="product.html">Hubo Boss Emotion</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>2,350.00</span></a></p>
-        </div>
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="images/dummy/pic_6.jpg" width="38" height="38" alt="Christian Dior J'adore" /></a>
-          <h3><a href="product.html">Christian Dior J'adore</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>328.99</span></a></p>
-        </div>
-      </div>
-
     </div>
-    
-    
   </div>
   <!-- end of content -->
 {% endblock body %}
