--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -37,15 +37,6 @@
           <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4de0eff004042e7a"></script>
           <!-- AddThis Button END -->
         </div>
-        <div id="product_options">
-          <h3>Available Options</h3>
-          <label for="option_Memory">Memory</label>
-          <select id="option_Memory">
-            <option value="676">1 GB +29.38<span class="s_currency s_after"> eur</span> </option>
-            <option value="677">2 GB +47.00<span class="s_currency s_after"> eur</span> </option>
-          </select>
-          <span class="clear"></span>
-        </div>
         <div id="product_buy" class="clearfix">
             {% include 'add_to_cart_form.html' with product=product %}
         </div>
@@ -54,66 +45,16 @@
       <div class="s_tabs grid_12 alpha omega">
         <ul class="s_tabs_nav clearfix">
           <li><a href="#product_description">Description</a></li>
-          <li><a href="#product_reviews">Reviews (1)</a></li>
+          <li><a href="url 'product_reviews' product.id">Reviews</a></li>
           <li><a href="#product_gallery">Photos (2)</a></li>
         </ul>
         <div class="s_tab_box">
-        
           <div id="product_description">
             <div class="cpt_product_description ">
                 {{ product.description }}
             </div>
             <!-- cpt_container_end -->
           </div>
-          
-<!--          <div id="product_reviews" class="s_listing">-->
-<!--            <div class="s_review last">-->
-<!--              <p class="s_author"><strong>Shoppica</strong><small>(29/03/2011)</small></p>-->
-<!--              <div class="right">-->
-<!--                <div class="s_rating_holder">-->
-<!--                  <p class="s_rating s_rating_5"><span class="s_percent" style="width: 100%;"></span></p>-->
-<!--                  <span class="s_average">5 out of 5 Stars!</span>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="clear"></div>-->
-<!--              <p>Vestibulum molestie tellus rhoncus nulla cursus quis dictum orci laoreet! metus. Vestibulum molestie tellus rhoncus nulla cursus quis dictum orci laoreet! metus.</p>-->
-<!--            </div>-->
-<!--            <div class="pagination"><div class="results">Showing 1 to 1 of 1 (1 Pages)</div></div>-->
-<!--            <h2 class="s_title_1"><span class="s_main_color">Write</span> Review</h2>-->
-<!--            <div id="review_title" class="clear"></div>-->
-<!--            <div class="s_row_3 clearfix">-->
-<!--              <label><strong>Your Name:</strong></label>-->
-<!--              <input type="text" />-->
-<!--            </div>-->
-<!--            <div class="s_row_3 clearfix">-->
-<!--              <label><strong>Your Review:</strong></label>-->
-<!--              <textarea style="width: 98%;" rows="8"></textarea>-->
-<!--              <p class="s_legend"><span style="color: #FF0000;">Note:</span> HTML is not translated!</p>-->
-<!--            </div>-->
-<!--            <div class="s_row_3 clearfix">-->
-<!--              <label><strong>Rating</strong></label>-->
-<!--              <span class="clear"></span> <span>Bad</span>&nbsp;-->
-<!--              <input type="radio" />-->
-<!--              &nbsp;-->
-<!--              <input type="radio" />-->
-<!--              &nbsp;-->
-<!--              <input type="radio" />-->
-<!--              &nbsp;-->
-<!--              <input type="radio" />-->
-<!--              &nbsp;-->
-<!--              <input type="radio" />-->
-<!--              &nbsp; <span>Good</span>-->
-<!--            </div>-->
-<!--            <span class="clear border_ddd"></span>-->
-<!--            <a class="s_button_1 s_main_color_bgr"><span class="s_text">Continue</span></a> <span class="clear"></span>-->
-<!--          </div>-->
-<!--            -->
-<!--          <div id="product_gallery">-->
-<!--            <ul class="s_thumbs clearfix">-->
-<!--              <li><a class="s_thumb" href="images/dummy/pic_2.jpg" title="Leica M7" rel="prettyPhoto[gallery]"><img src="images/dummy/pic_2.jpg" width="120" title="Leica M7" alt="Leica M7" /></a></li>-->
-<!--              <li><a class="s_thumb" href="images/dummy/pic_3.jpg" title="Leica M7" rel="prettyPhoto[gallery]"><img src="images/dummy/pic_3.jpg" width="120" title="Leica M7" alt="Leica M7" /></a></li>-->
-<!--            </ul>-->
-<!--          </div>-->
         </div>
       </div>
       
