--- a/main/templates/main/search_results.html
+++ b/main/templates/main/search_results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-
-{% block title %} Searching results {% endblock title %}
+{% load static %}
+{% block title %} Search results {% endblock title %}
 
 {% block body %}
     <h1>Searching results:</h1>
@@ -8,6 +8,7 @@
     {% for prod in products %}
         <p>{{ prod.id }}</p>
         <p><a href="{% url 'product-details' prod.id %}" >{{ prod.name }}</a></p>
+
         <p>{{ prod.price }}</p>
         {% include 'add_to_cart_form.html' with product=prod %}
         <p>-----------------</p>
